mdapipkg/unpackaged/objects/Billing_Detail_1__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Number__c</fullName>
        <label>Billing Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Seq_No__c</fullName>
        <label>Billing Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Library_Id__c</fullName>
        <label>Library Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Tax_Code__c</fullName>
        <label>Other Tax Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Number__c</fullName>
        <label>Package Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prefix_Code__c</fullName>
        <label>Prefix Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E_Activity__c</fullName>
        <label>S&amp;E Activity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E_Classification__c</fullName>
        <label>S&amp;E Classification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E_Fed_Tx_Amt__c</fullName>
        <label>S&amp;E Federal Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_E_Federal_Tax__c</fullName>
        <label>S&amp;E Federal Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_E_From_Date__c</fullName>
        <label>S&amp;E From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>S_E_Item_Des__c</fullName>
        <label>S&amp;E Item Description</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E_M_Chr_Amt__c</fullName>
        <label>S&amp;E Monthly Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_E_P_Otr_C_A_CR__c</fullName>
        <label>S&amp;E Proration Other CHG AND CR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E_Quantity__c</fullName>
        <label>S&amp;E Quantity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E_State_TAX__c</fullName>
        <label>S&amp;E State TAX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_E_ToDate__c</fullName>
        <label>S&amp;E ToDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_No__c</fullName>
        <label>Service Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Billing Detail 1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Billing Detail 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Detail 1&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>